idf_component_register(SRCS "main.c"
                            "gattc.c"
                            "beacon.c"
                            "irsensor.c"
                            "blufi.c"
                            "misc.c"
                            "deepsleep.c"
                            "websocket.c"
                    INCLUDE_DIRS ".")
